Throw exception if curve is too short for setValueCurveAtTime

If the curve for setValueCurveAtTime is too short (length less than
2), an exception must be thrown.

BUG=615477
TEST=audioparam-setValueCurve-exceptions.html updated

Review-Url: https://codereview.chromium.org/2020753002
Cr-Commit-Position: refs/heads/master@{#397164}

Former-commit-id: 0970fcf609bebf7792fcc9606983fad61e7da6a8